--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
             <a class="transition-all duration-700 hover:brightness-50" href="">
               قوانین و مقررات
             </a>
-            <a class="transition-all duration-700 hover:brightness-50" href=""
+            <a
+              class="transition-all duration-700 hover:brightness-50"
+              href="/faq/"
               >سوالات متداول</a
             >
           </div>
@@ -60,7 +62,7 @@
           <li><img src="/assets/images/logo-orange.png" alt="" /></li>
           <li>
             <a
-              href=""
+              href="/"
               class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('/assets/images/Selected.svg')]"
               >صفحه اصلی</a
             >
@@ -78,17 +80,17 @@
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">مقالات</a>
+            <a href="/articles/">مقالات</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">تماس با ما</a>
+            <a href="/contact/">تماس با ما</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">درباره من</a>
+            <a href="/about/">درباره ما</a>
           </li>
         </ul>
         <div class="flex items-center gap-5 md:hidden">
@@ -132,7 +134,7 @@
                     </li>
                     <li>
                       <a
-                        href=""
+                        href="/"
                         class="active relative after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('/assets/images/Selected.svg')]"
                         >صفحه اصلی</a
                       >
@@ -150,17 +152,17 @@
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">مقالات</a>
+                      <a href="/articles/">مقالات</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">تماس با ما</a>
+                      <a href="/contact/">تماس با ما</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">درباره من</a>
+                      <a href="/about/">درباره ما</a>
                     </li>
                   </ul>
                 </div>
@@ -191,7 +193,8 @@
             </svg>
           </button>
           <div>
-            <button
+            <a
+              href="/request-demo/"
               class="flex gap-2 rounded-full bg-green-600 p-3 font-bold text-white transition-all duration-700 hover:brightness-75"
             >
               درخواست دمو
@@ -221,7 +224,7 @@
                   </clipPath>
                 </defs>
               </svg>
-            </button>
+            </a>
           </div>
         </div>
       </nav>
@@ -1798,7 +1801,7 @@
                 استفاده؟
               </p>
             </div>
-            <div class="answercont">
+            <div class="answercont" style="max-height: 116px">
               <p class="answer py-6 font-thin">
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
                 استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
@@ -1978,7 +1981,8 @@
         </div>
         <div>
           <div>
-            <button
+            <a
+              href="/request-demo/"
               class="flex items-center gap-2 rounded-full border border-white p-1 px-2 font-bold text-white transition-all duration-700 hover:brightness-95"
             >
               درخواست دمو<svg
@@ -1998,7 +2002,7 @@
                   fill="white"
                 />
               </svg>
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -2050,19 +2054,19 @@
           <div>
             <p class="text-2xl font-bold">دسترسی سریع</p>
             <ul class="mt-4 space-y-5">
-              <li><a href="">تماس با ما</a></li>
-              <li><a href="">درباره ما</a></li>
-              <li><a href="">درخواست دمو</a></li>
-              <li><a href="">مقالات</a></li>
+              <li><a href="/contact/">تماس با ما</a></li>
+              <li><a href="/about/">درباره ما</a></li>
+              <li><a href="/request-demo/">درخواست دمو</a></li>
+              <li><a href="/articles/">مقالات</a></li>
             </ul>
           </div>
           <div>
             <p class="text-2xl font-bold">محصول</p>
             <ul class="mt-4 space-y-5">
               <li><a href="/prices/">قیمت ها</a></li>
-              <li><a href="">سوالات متداول</a></li>
-              <li><a href="">پشتیبانی</a></li>
-              <li><a href="">راهکارها</a></li>
+              <li><a href="/faq/">سوالات متداول</a></li>
+              <li><a href="/contact/">پشتیبانی</a></li>
+              <li><a href="/solutions/">راهکارها</a></li>
             </ul>
           </div>
         </div>
@@ -2202,5 +2206,6 @@
         </div>
       </div>
     </footer>
+    <script src="/assets/ts/faq.ts" type="module"></script>
   </body>
 </html>
