--- a/src/prices/index.html
+++ b/src/prices/index.html
@@ -18,7 +18,9 @@
             <a class="transition-all duration-700 hover:brightness-50" href="">
               قوانین و مقررات
             </a>
-            <a class="transition-all duration-700 hover:brightness-50" href=""
+            <a
+              class="transition-all duration-700 hover:brightness-50"
+              href="/faq/"
               >سوالات متداول</a
             >
           </div>
@@ -69,24 +71,24 @@
             <a href="/solutions/">راهکار ها</a>
           </li>
           <li
-            class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+            class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('/assets/images/Selected.svg')]"
           >
             <a href="/prices/">قیمت ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">مقالات</a>
+            <a href="/articles/">مقالات</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">تماس با ما</a>
+            <a href="/contact/">تماس با ما</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">درباره من</a>
+            <a href="/about/">درباره ما</a>
           </li>
         </ul>
         <div class="flex items-center gap-5 md:hidden">
@@ -128,10 +130,12 @@
                     <li>
                       <img src="/assets/images/logo-orange.png" alt="" />
                     </li>
-                    <li
-                      class="text-gray-800 transition-all duration-700 hover:brightness-50"
-                    >
-                      <a href="/">صفحه اصلی</a>
+                    <li>
+                      <a
+                        href="/"
+                        class="text-gray-800 transition-all duration-700 hover:brightness-50"
+                        >صفحه اصلی</a
+                      >
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -139,24 +143,24 @@
                       <a href="/solutions/">راهکار ها</a>
                     </li>
                     <li
-                      class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+                      class="active relative after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('/assets/images/Selected.svg')]"
                     >
                       <a href="/prices/">قیمت ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">مقالات</a>
+                      <a href="/articles/">مقالات</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">تماس با ما</a>
+                      <a href="/contact/">تماس با ما</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">درباره من</a>
+                      <a href="/about/">درباره ما</a>
                     </li>
                   </ul>
                 </div>
@@ -187,7 +191,8 @@
             </svg>
           </button>
           <div>
-            <button
+            <a
+              href="/request-demo/"
               class="flex gap-2 rounded-full bg-green-600 p-3 font-bold text-white transition-all duration-700 hover:brightness-75"
             >
               درخواست دمو
@@ -217,7 +222,7 @@
                   </clipPath>
                 </defs>
               </svg>
-            </button>
+            </a>
           </div>
         </div>
       </nav>
@@ -248,7 +253,7 @@
             >صفحه اصلی</a
           >
           <p>/</p>
-          <a class="font-bold" href="solutions.html">راهکار ها</a>
+          <a class="font-bold" href="/prices/">قیمت ها</a>
         </div>
       </div>
     </header>
@@ -384,7 +389,7 @@
           </form>
           <div
             style="background-size: 100%"
-            class="bg-prices-bg-small md:bg-prices-bg mt-20 min-h-[15rem] rounded-3xl bg-bottom bg-no-repeat md:bg-center"
+            class="mt-20 min-h-[15rem] rounded-3xl bg-prices-bg-small bg-bottom bg-no-repeat md:bg-prices-bg md:bg-center"
           >
             <div class="max-w-[35rem] space-y-8 px-3 py-6">
               <h1 class="mt-4 text-3xl font-extrabold">هتل های 3 تا 5 ستاره</h1>
@@ -719,7 +724,8 @@
         </div>
         <div>
           <div>
-            <button
+            <a
+              href="/request-demo/"
               class="flex items-center gap-2 rounded-full border border-white p-1 px-2 font-bold text-white transition-all duration-700 hover:brightness-95"
             >
               درخواست دمو<svg
@@ -739,7 +745,7 @@
                   fill="white"
                 />
               </svg>
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -791,19 +797,19 @@
           <div>
             <p class="text-2xl font-bold">دسترسی سریع</p>
             <ul class="mt-4 space-y-5">
-              <li><a href="">تماس با ما</a></li>
-              <li><a href="">درباره ما</a></li>
-              <li><a href="">درخواست دمو</a></li>
-              <li><a href="">مقالات</a></li>
+              <li><a href="/contact/">تماس با ما</a></li>
+              <li><a href="/about/">درباره ما</a></li>
+              <li><a href="/request-demo/">درخواست دمو</a></li>
+              <li><a href="/articles/">مقالات</a></li>
             </ul>
           </div>
           <div>
             <p class="text-2xl font-bold">محصول</p>
             <ul class="mt-4 space-y-5">
               <li><a href="/prices/">قیمت ها</a></li>
-              <li><a href="">سوالات متداول</a></li>
-              <li><a href="">پشتیبانی</a></li>
-              <li><a href="">راهکارها</a></li>
+              <li><a href="/faq/">سوالات متداول</a></li>
+              <li><a href="/contact/">پشتیبانی</a></li>
+              <li><a href="/solutions/">راهکارها</a></li>
             </ul>
           </div>
         </div>
