--- a/src/solutions/b2b/index.html
+++ b/src/solutions/b2b/index.html
@@ -268,18 +268,19 @@
           >
             /
           </p>
-          <a class="font-bold" href="/solutions/ota/"> OTA</a>
+          <a class="font-bold" href="/solutions/b2b/"> b2b</a>
         </div>
       </div>
     </header>
     <main>
       <div class="m-auto my-32 w-fit px-5 text-center">
         <div>
-          <h1 class="text-center text-5xl font-extrabold md:text-7xl">OTA</h1>
+          <h1 class="text-center text-5xl font-extrabold md:text-7xl">
+            پنل B2B برای آژانس‌های مسافرتی
+          </h1>
           <p class="mt-5 text-lg">
-            راهکار CRS ما به آژانس‌های مسافرتی آنلاین (OTA) یک موتور رزرو در
-            زمان <br class="hidden sm:block" />واقعی ارائه می‌کند تا مسافران را
-            به هتل‌های سراسر ایران متصل کند.
+            پنل B2B ما یک پلتفرم مرکزی برای مدیریت رزرو، فاکتور<br />
+            و کمیسیون آژانس‌های مسافرتی ارائه می‌کند.
           </p>
         </div>
       </div>
@@ -296,7 +297,7 @@
                   <h2
                     class="text-center text-2xl font-extrabold high-sm:text-3xl"
                   >
-                    موجودی و قیمت لحظه ای
+                    رزرو و مدیریت لحظه ای
                   </h2>
                 </div>
                 <svg
@@ -334,12 +335,11 @@
                   <h2
                     class="text-center text-2xl font-extrabold high-sm:text-3xl lg:text-right"
                   >
-                    سیستم مالی<br class="hidden high-sm:block lg:hidden" />
-                    منعطف
+                    مدیریت مالی<br class="lg:hidden" />
+                    و پرداخت ها
                   </h2>
                   <p class="hidden lg:block">
-                    امکان بهره مندی از سیستم های مالی متنوع به توجه به نیاز
-                    سازمانی شما.
+                    فاکتورها، کمیسیون‌ها و پرداخت‌های خود را مدیریت کنید.
                   </p>
                 </div>
 
@@ -385,7 +385,7 @@
                   <h2
                     class="text-center text-2xl font-extrabold high-sm:text-3xl"
                   >
-                    پشتیبانی چند زبانه
+                    تحلیل عملکرد
                   </h2>
                 </div>
                 <svg
@@ -445,11 +445,11 @@
                   <h2
                     class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
                   >
-                    موجودی و قیمت لحظه ای
+                    گزارش‌گیری تلفیقی
                   </h2>
                   <p>
-                    دسترسی لحظه ای به موجودی اتاق ها و نرخ‌ها شامل طیف گسترده‌ای
-                    از هتل های ایران.
+                    بینشی در مورد روندهای رزرو، هتل‌های پرفروش و عملکرد آژانس ها
+                    به دست آورید.
                   </p>
                 </div>
                 <svg
@@ -485,8 +485,8 @@
                     سیستم مدیریت دارایی (PMS)
                   </h2>
                   <p>
-                    امکان بهره مندی از سیستم های مالی متنوع به توجه به نیاز
-                    سازمانی شما.
+                    جریان‌های کاری و فرآیندهای استاندارد را برای اطمینان از
+                    سازگاری در تمام دارایی‌ها پیاده‌سازی کنید.
                   </p>
                 </div>
                 <svg
@@ -513,10 +513,15 @@
                 <div
                   class="ml-4 w-full space-y-4 p-6 font-medium high-sm:mr-12 lg:ml-12"
                 >
-                  <h2 class="hidden text-3xl font-extrabold lg:block">
-                    پشتیبانی چند زبانه
+                  <h2
+                    class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
+                  >
+                    مدیریت داده‌های متمرکز
                   </h2>
-                  <p>امکان ارائه خدمات به چندین زبان.</p>
+                  <p>
+                    داده‌های مهمان، رزرو و سایر اطلاعات را به‌طور متمرکز مدیریت
+                    کنید تا کارایی را بهبود بخشید.
+                  </p>
                 </div>
                 <svg
                   class="absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block high-sm:hidden lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
