--- a/solutions/b2b/index.html
+++ b/solutions/b2b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solutions</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../../output.css" />
   </head>
   <body>
     <div class="absolute left-0 -z-10 hidden md:block">
@@ -894,6 +894,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/assets/ts/nav.ts"></script>
+    <script type="module" src="/assets/js/nav.js"></script>
   </body>
 </html>
