--- a/solutions/index.html
+++ b/solutions/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solutions</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../output.css" />
   </head>
   <body>
     <header class="space-y-5">
@@ -1026,6 +1026,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/assets/ts/nav.ts"></script>
+    <script type="module" src="/assets/js/nav.js"></script>
   </body>
 </html>
