--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <script src="./assets/js/nav.js" defer></script>
+    <script src="/assets/js/nav.js" defer></script>
   </head>
   <body>
     <div class="absolute left-0 -z-10 hidden md:block">
