--- a/prices/index.html
+++ b/prices/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prices</title>
     <link rel="stylesheet" href="../output.css" />
-    <script defer type="module" src="/assets/js/prices.js"></script>
-    <script src="
-    https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
-    "></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide-core.min.css"
@@ -957,5 +954,7 @@
       </div>
     </footer>
     <script type="module" src="/assets/js/nav.js"></script>
+    <script defer type="module" src="/assets/js/prices.js"></script>
+
   </body>
 </html>
